# cpu-ray-tracing-engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  compileInforme.sh  conf.json  informe.md  main.cpp  makefile  report-spanish.md  run.sh  runWin.sh
docs/: compile-report.sh  report-spanish.md
renders/: dragon.json
src/: camera.h  color.h  configuration.h  engine.cpp  engine.h  image_writer.h  main.cpp  percentage.h  ray.h  rtweekend.h  vec3.h
src/filters/: convolution.h  filters.h
src/hittables/: aabb.h  box.h  bvh.cpp  bvh.h  hittable.h  hittable_list.h  material.h  polygon.h  space_divider.cpp  space_divider.h  sphere.h  square.h  texture.h  triangle.h  triangle_mesh.cpp  triangle_mesh.h
src/material/: constant_medium.h  image_texture.h  material.h  perlin.h  stars_texture.h  texture.h
src/utils/: RSJparser.tcc  color.h  image_writer.h  matrix.h  obj_loader.h  rtweekend.h  time.h  vec3.h
tests/: main.cpp  spaceDividerTest.cpp
